# alphora

./: .gitignore  CHANGELOG.md  CLA.md  LICENSE  MANIFEST.in  README.cn.md  README.en.md  README.md  pyproject.toml  requirements.txt  setup.py
alphora/: __init__.py  _install_ext.py
alphora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alphora/agent/: __init__.py  _request_scope.py  agent_collab.py  agent_readme.md  base.py  base_agent.py  events.py  plan_execute_agent.py  (+5 more)
docs/: ARCHITECTURE.md  file_server.openapi.json
examples/: 1-1-智能体基础功能.py  1-2-记忆管理功能.py  1-3-提示词系统功能.py  1-4-1-后处理示例1.py  1-4-后处理功能.py  1-5-并行推理.py  1-5-高级后处理功能.py  1-5-高级记忆管理功能.py  1-6-快速API部署示例.py  1-7-工具调用.py  2-1-新功能.py  2-2-debugger.py  README.md  agent.py  example.py  test_pa.py  uu.tmpl  天.py
frontend/: README.md  serve.py
playground/: tool_streaming.py
tests/: test_memory_manager_memory_id.py  test_repetition_guard.py  test_request_scope.py
tutorials/: 01_basic_react_agent.py  02_tools_schema_and_validation.py  03_tool_parallel_and_async.py  04_memory_basic_history.py  05_memory_pin_tag_undo.py  06_prompter_templates.py  07_prompter_parallel.py  08_postprocess_pipeline.py  09_multimodal_message.py  10_llm_load_balancer.py  11_streaming_output.py  12_hooks_lifecycle.py  13_debugger_tracing.py  14_sandbox_code_exec.py  15_agent_derivation.py  16_skill_agent_basic.py  17_storage_backends.py  18_publish_api.py  18_skills.py  19_tool_call_postprocess.py  20_hook_tool_example.py  21_mcp_stdio.py  21_tool_call_render.py
web/: README.md  index.html  renderer_config.js  serve.py
(+258 files in other folders)
